--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ build/
 atlassian-ide-plugin.xml
 src/main/resources/application-local.properties
 .factorypath
+spr-failures.txt
+spr-mappings.csv
