--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<spring.version>5.1.4.BUILD-SNAPSHOT</spring.version>
 	</properties>
 
 	<dependencies>
