--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+logging.pattern.console=%d{HH:mm:ss.SSS} %-5level %c{1} - %msg%n
+logging.level.io.pivotal=INFO
+logging.level.org.springframework.web=INFO
+#logging.level.org.apache.http.wire=DEBUG
+
 ##
 # The OAuth Access Token used to perform the migration. Visit
 # https://github.com/settings/tokens
@@ -7,34 +12,39 @@
 #github.access-token=
 
 ##
-# The base url of JIRA to use. For example, "https://jira.spring.io"
-jira.base-url=https://jira.spring.io
+# The base url of JIRA to use. For example, "https://jira-stage.spring.io"
+jira.base-url=https://jira-stage.spring.io/
+#jira.base-url=https://jira.spring.io
+
 ##
 # The JIRA project id to migrate. For example, "SEC".
-jira.projectId=SEC
+jira.projectId=SPR
+#jira.projectId=SEC
 
 ##
 # The github repository slug to migrate to. For example, to migrate the
 # issues to https://github.com/spring-projects/spring-security/issues use
 # "spring-projects/spring-security". It is a good idea to run the migration
 # against a test repository first.
-github.repository-slug=rwinch/spring-security-migrate-issues
+github.repository-slug=rstoyanchev/spr-issue-migration-test
+#github.repository-slug=rwinch/spring-security-migrate-issues
 
 ##
 # If set, the migration script will attempt to delete / create a GitHub
 # repository to migrate the issues to using the github.repository-slug.
 # Useful for testing the migration to a dummy repository.
-# github.delete-create-repository-slug=true
+github.delete-create-repository-slug=true
 
 ##
 # If set, will use this JQL query to import issues.
 # Useful for migrating only a subset of queries (for testing).
 # The default is to use "project = ${jira.projectId}"
 #jira.migrate-jql=id\=SEC-1
-
-##
-# Log level of HTTP requests (when using apache commons)
-#logging.level.org.apache.http.wire=DEBUG
+jira.migrate-jql=id\=SPR-13036
+#jira.migrate-jql=id in (SPR-10996,SPR-11009)
+#jira.migrate-jql=id in (SPR-12825,SPR-16931,SPR-17402,SPR-17408,SPR-17421,SPR-17424,SPR-17534,SPR-17536,SPR-17598)
+#jira.migrate-jql=project \= SPR AND created >\= -6w ORDER BY created ASC
+#jira.migrate-jql=project \= SPR AND created >\= -52w ORDER BY created DESC
 
 ##
 # Includes the local profile. This allows for placing the OAuth token in application-local.properties so it is not
