--- a/src/main/resources/jira-to-github-users.properties
+++ b/src/main/resources/jira-to-github-users.properties
@@ -25,16 +25,16 @@
 # ==========================
 # Spring Framework migration
 # ==========================
-#juergen.hoeller:jhoeller
+juergen.hoeller:jhoeller
 rstoya05-aop:rstoyanchev
-#sbrannen:sbrannen
-#bclozel:bclozel
-#snicoll:snicoll
-#arjen.poutsma:poutsma
-#sdeleuze:sdeleuze
-#pwebb:philwebb
-#aclement:aclement
-#rwinch:rwinch
-#olivergierke:odrotbohm
-#violetagg:violetagg
-#grussell:garyrussell
+sbrannen:sbrannen
+bclozel:bclozel
+snicoll:snicoll
+arjen.poutsma:poutsma
+sdeleuze:sdeleuze
+pwebb:philwebb
+aclement:aclement
+rwinch:rwinch
+olivergierke:odrotbohm
+violetagg:violetagg
+grussell:garyrussell
