--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@ src/main/resources/application-local.properties
 .factorypath
 github-issue-mappings.properties
 github-migration-failures.txt
-issues-markup-source.txt
-issues-markup-target.txt
+markup-before.txt
+markup-after.txt
