--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,8 +40,8 @@ github.delete-create-repository-slug=true
 # Useful for migrating only a subset of queries (for testing).
 # The default is to use "project = ${jira.projectId}"
 #jira.migrate-jql=id\=SEC-1
-jira.migrate-jql=id\=SPR-13036
-#jira.migrate-jql=id in (SPR-10996,SPR-11009)
+jira.migrate-jql=id\=SPR-17421
+#jira.migrate-jql=id in (SPR-10996,SPR-11009,SPR-17383)
 #jira.migrate-jql=id in (SPR-12825,SPR-16931,SPR-17402,SPR-17408,SPR-17421,SPR-17424,SPR-17534,SPR-17536,SPR-17598)
 #jira.migrate-jql=project \= SPR AND created >\= -6w ORDER BY created ASC
 #jira.migrate-jql=project \= SPR AND created >\= -52w ORDER BY created DESC
