Markup conversion improvements
- tasks (/)(x)(!) -> [x][ ]
- tables ||a||b|| -? |a|b|\n|:---|:---|
- numbered lists #, ##, #*, #-, #--
- unordered nested lists **
- emphasis, escape/suppress when over multiple lines
- emphasis, from "*foo*" to "**foo**"
- replace Jira issue keys with links for all Jira projects
- XML/HTML blocks, escape "<" and "</" so they're not treated as raw html
- if comment ends with horizontal line (e.g. "----"), remove it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,11 +40,13 @@ github.delete-create-repository-slug=true
 # Useful for migrating only a subset of queries (for testing).
 # The default is to use "project = ${jira.projectId}"
 #jira.migrate-jql=id\=SEC-1
-jira.migrate-jql=id\=SPR-17421
+jira.migrate-jql=id\=SPR-14821
 #jira.migrate-jql=id in (SPR-10996,SPR-11009,SPR-17383)
 #jira.migrate-jql=id in (SPR-12825,SPR-16931,SPR-17402,SPR-17408,SPR-17421,SPR-17424,SPR-17534,SPR-17536,SPR-17598)
 #jira.migrate-jql=project \= SPR AND created >\= -6w ORDER BY created ASC
 #jira.migrate-jql=project \= SPR AND created >\= -52w ORDER BY created DESC
+# Formatting (tables, nested bullets): SPR-1987, SPR-5079, SPR-7655, SPR-11393
+# XML tags: SPR-14821
 
 ##
 # Includes the local profile. This allows for placing the OAuth token in application-local.properties so it is not
