--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.1.RELEASE</version>
+		<version>2.1.2.BUILD-SNAPSHOT</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<spring.version>5.1.4.BUILD-SNAPSHOT</spring.version>
+		<spring.version>5.1.4.RELEASE</spring.version>
+		<reactor-bom.version>Californium-SR4</reactor-bom.version>
 	</properties>
 
 	<dependencies>
