"Safe" application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,27 +26,21 @@ jira.projectId=SPR
 # issues to https://github.com/spring-projects/spring-security/issues use
 # "spring-projects/spring-security". It is a good idea to run the migration
 # against a test repository first.
-github.repository-slug=rstoyanchev/spr-issue-migration-test
+#github.repository-slug=rstoyanchev/spr-issue-migration-test
 #github.repository-slug=rwinch/spring-security-migrate-issues
 
 ##
 # If set, the migration script will attempt to delete / create a GitHub
 # repository to migrate the issues to using the github.repository-slug.
 # Useful for testing the migration to a dummy repository.
-github.delete-create-repository-slug=true
+github.delete-create-repository-slug=false
 
 ##
 # If set, will use this JQL query to import issues.
 # Useful for migrating only a subset of queries (for testing).
 # The default is to use "project = ${jira.projectId}"
 #jira.migrate-jql=id\=SEC-1
-jira.migrate-jql=id\=SPR-14821
-#jira.migrate-jql=id in (SPR-10996,SPR-11009,SPR-17383)
-#jira.migrate-jql=id in (SPR-12825,SPR-16931,SPR-17402,SPR-17408,SPR-17421,SPR-17424,SPR-17534,SPR-17536,SPR-17598)
-#jira.migrate-jql=project \= SPR AND created >\= -6w ORDER BY created ASC
-#jira.migrate-jql=project \= SPR AND created >\= -52w ORDER BY created DESC
-# Formatting (tables, nested bullets): SPR-1987, SPR-5079, SPR-7655, SPR-11393
-# XML tags: SPR-14821
+#jira.migrate-jql=id\=SPR-14821
 
 ##
 # Includes the local profile. This allows for placing the OAuth token in application-local.properties so it is not
