--- a/src/main/resources/jira-to-github-users.properties
+++ b/src/main/resources/jira-to-github-users.properties
@@ -25,14 +25,27 @@
 # ==========================
 # Spring Framework migration
 # ==========================
-juergen.hoeller:jhoeller
+#juergen.hoeller:jhoeller
+#rstoya05-aop:rstoyanchev
+#sbrannen:sbrannen
+#bclozel:bclozel
+#snicoll:snicoll
+#arjen.poutsma:poutsma
+#sdeleuze:sdeleuze
+#pwebb:philwebb
+#aclement:aclement
+#rwinch:rwinch
+#olivergierke:odrotbohm
+
+# ==========================
+# Spring Web Flow migration
+# ==========================
+
 rstoya05-aop:rstoyanchev
-sbrannen:sbrannen
-bclozel:bclozel
-snicoll:snicoll
-arjen.poutsma:poutsma
-sdeleuze:sdeleuze
+kdonald:kdonald
+jeremyg484:jeremyg484
+sandrews:scothis
 pwebb:philwebb
-aclement:aclement
-rwinch:rwinch
-olivergierke:odrotbohm
+nebhale:nebhale
+klr8:klr8
+agim:aemruli
