Minor fixes as a result of testing post migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.web=INFO
 
 ##
 # The base url of JIRA to use. For example, "https://jira-stage.spring.io"
-jira.base-url=https://jira-stage.spring.io/
+jira.base-url=https://jira-stage.spring.io
 #jira.base-url=https://jira.spring.io
 
 ##
@@ -35,7 +35,7 @@ github.repository-slug=rstoyanchev/swf-migration-test
 # If set, the migration script will attempt to delete / create a GitHub
 # repository to migrate the issues to using the github.repository-slug.
 # Useful for testing the migration to a dummy repository.
-github.delete-create-repository-slug=false
+github.delete-create-repository-slug=true
 
 ##
 # If set, will use this JQL query to import issues.
@@ -43,7 +43,7 @@ github.delete-create-repository-slug=false
 # The default is to use "project = ${jira.projectId}"
 #jira.migrate-jql=id\=SEC-1
 #jira.migrate-jql=id\=SPR-14821
-jira.migrate-jql=project\=SWF AND created>2016-01-01 AND created<2017-01-01
+jira.migrate-jql=project\=SWF AND created>2015-01-01
 
 ##
 # Includes the local profile. This allows for placing the OAuth token in application-local.properties so it is not
