Fix issues uncovered from running Web Flow migration

--- a/src/main/resources/jira-to-github-users.properties
+++ b/src/main/resources/jira-to-github-users.properties
@@ -1,3 +1,14 @@
+
+# ===========================================================================
+# !!! WARNING !!!
+#
+# Create mappings only for users who can be assignees.
+# The GitHub import REST API will reject issues with an "invalid" assignee
+# and this is easy to miss with a test project.
+#
+# ===========================================================================
+
+
 # =========================
 # Spring Security migration
 # =========================
@@ -42,10 +53,3 @@
 # ==========================
 
 rstoya05-aop:rstoyanchev
-kdonald:kdonald
-jeremyg484:jeremyg484
-sandrews:scothis
-pwebb:philwebb
-nebhale:nebhale
-klr8:klr8
-agim:aemruli
