--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ logging.level.org.springframework.web=INFO
 
 ##
 # The base url of JIRA to use. For example, "https://jira-stage.spring.io"
-jira.base-url=https://jira-stage.spring.io
-#jira.base-url=https://jira.spring.io
+#jira.base-url=https://jira-stage.spring.io
+jira.base-url=https://jira.spring.io
 
 ##
 # The JIRA project id to migrate. For example, "SEC".
@@ -29,13 +29,14 @@ jira.projectId=SWF
 # against a test repository first.
 #github.repository-slug=rstoyanchev/spr-issue-migration-test
 #github.repository-slug=rwinch/spring-security-migrate-issues
-github.repository-slug=rstoyanchev/swf-migration-test
+#github.repository-slug=rstoyanchev/swf-migration-test
+github.repository-slug=spring-projects/spring-webflow
 
 ##
 # If set, the migration script will attempt to delete / create a GitHub
 # repository to migrate the issues to using the github.repository-slug.
 # Useful for testing the migration to a dummy repository.
-github.delete-create-repository-slug=true
+github.delete-create-repository-slug=false
 
 ##
 # If set, will use this JQL query to import issues.
@@ -43,7 +44,7 @@ github.delete-create-repository-slug=true
 # The default is to use "project = ${jira.projectId}"
 #jira.migrate-jql=id\=SEC-1
 #jira.migrate-jql=id\=SPR-14821
-jira.migrate-jql=project\=SWF AND created>2015-01-01
+#jira.migrate-jql=project\=SWF AND created>2015-01-01
 
 ##
 # Includes the local profile. This allows for placing the OAuth token in application-local.properties so it is not
