Add support for Spring Integration
* Upgrade to `flexmark-all-0.35.10`.
Tried to the latest one, but then `MarkdownEngine` messes up with links on a second phase:
wraps already correct GH links into `[]`
* Add `INT` JIRA project handling into `application.properties`
* Modify `AssigneesReport` to output result items each from new line for better readability
* Use `AssigneesReport` result to populated `jira-to-github-users.properties` for Spring Integration
* Fix `JiraConfig` to wrap project id into quotes since `INT` is a reserved SQL word
* Add `SiMigrationConfig` for labels mapping
* Fix `MigrationConfigReport` to take a project id from the config
* Fix `MarkdownEngine` to ignore case for `code`, `noformat` and `panel` JIRA blocks
* Ignore `HttpClientErrorException.UnprocessableEntity` with an `already_exists` status
for labels and milestones on GH side.
* Fix NPE about `due_on` from JIRA milestones with just leaving the respective GH issue property empty

--- a/src/main/resources/jira-to-github-users.properties
+++ b/src/main/resources/jira-to-github-users.properties
@@ -52,4 +52,14 @@
 # Spring Web Flow migration
 # ==========================
 
-rstoya05-aop:rstoyanchev
+#rstoya05-aop:rstoyanchev
+
+# ==========================
+# Spring Integration migration
+# ==========================
+
+abilan:artembilan
+mark.fisher:markfisher
+tmarshall:trevormarshall
+david_syer:dsyer
+grussell:garyrussell
