Add support for Spring AMQP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ jira.base-url=https://jira.spring.io
 #jira.projectId=SPR
 #jira.projectId=SEC
 #jira.projectId=SWF
-jira.projectId=INT
+jira.projectId=AMQP
 
 ##
 # The github repository slug to migrate to. For example, to migrate the
@@ -32,7 +32,8 @@ jira.projectId=INT
 #github.repository-slug=rwinch/spring-security-migrate-issues
 #github.repository-slug=rstoyanchev/swf-migration-test
 #github.repository-slug=spring-projects/spring-webflow
-github.repository-slug=spring-projects/spring-integration
+#github.repository-slug=spring-projects/spring-integration
+github.repository-slug=spring-projects/spring-amqp
 
 ##
 # If set, the migration script will attempt to delete / create a GitHub
