--- a/src/main/resources/jira-to-github-users.properties
+++ b/src/main/resources/jira-to-github-users.properties
@@ -58,8 +58,16 @@
 # Spring Integration migration
 # ==========================
 
+#abilan:artembilan
+#mark.fisher:markfisher
+#tmarshall:trevormarshall
+#david_syer:dsyer
+#grussell:garyrussell
+
+# ==========================
+# Spring AMQP migration
+# ==========================
+
 abilan:artembilan
-mark.fisher:markfisher
-tmarshall:trevormarshall
 david_syer:dsyer
 grussell:garyrussell
